tests/ui/rename/test_rename_enable.stderr
error: unexpected field `rename`
 --> $DIR/test_rename_enable.rs:4:20
  |
4 | #[shorthand(enable(rename))]
  |                    ^^^^^^
